# simpledap

./: Cargo.toml  rustfmt.toml  shell.nix
rust_mi/: Cargo.toml
rust_mi/src/: lib.rs  parser.rs
rust_mi/src/parser/: mod.rs  output_types.rs  strings.rs  types.rs
rust_mi/src/types/: mod.rs  values.rs
src/: main.rs
src/dap/: mod.rs  types.rs
