[package]
name = "rust_mi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = {version="7.1.0",features =[ "alloc"]}
tokio = { version = "1.17.0", features = ["io-std", "io-util", "process"] }

[features]
